--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@svgr/webpack": "^5.4.0",
     "classnames": "^2.2.6",
     "next": "latest",
+    "next-compose-plugins": "^2.2.0",
     "next-images": "^1.4.0",
+    "next-svgr": "0.0.2",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
