--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
     "classnames": "^2.2.6",
+    "github-slugger": "^1.3.0",
     "next": "latest",
     "next-compose-plugins": "^2.2.0",
     "next-images": "^1.4.0",
@@ -18,7 +19,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "remark": "^12.0.0",
+    "remark-autolink-headings": "^6.0.1",
     "remark-html": "^11.0.2",
+    "remark-slug": "^6.0.0",
     "sass": "^1.26.10"
   },
   "devDependencies": {
