--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@svgr/webpack": "^5.4.0",
     "classnames": "^2.2.6",
     "github-slugger": "^1.3.0",
+    "lodash.throttle": "^4.1.1",
     "next": "latest",
     "next-compose-plugins": "^2.2.0",
     "next-images": "^1.4.0",
