--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "remark-autolink-headings": "^6.0.1",
     "remark-html": "^11.0.2",
     "remark-slug": "^6.0.0",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "postcss-preset-env": "^6.7.0",
