--- a/website/package.json
+++ b/website/package.json
@@ -14,9 +14,9 @@
     "lodash.throttle": "^4.1.1",
     "next": "latest",
     "next-compose-plugins": "^2.2.0",
-    "next-i18next": "^6.0.2",
     "next-images": "^1.4.0",
     "next-svgr": "0.0.2",
+    "next-translate": "^0.17.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
