--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "github-slugger": "^1.3.0",
     "lodash.throttle": "^4.1.1",
+    "mdast-flatten-image-paragraphs": "^1.0.0",
     "next": "latest",
     "next-compose-plugins": "^2.2.0",
     "next-images": "^1.4.0",
