--- a/website/package.json
+++ b/website/package.json
@@ -26,7 +26,9 @@
     "remark-html": "^11.0.2",
     "remark-slug": "^6.0.0",
     "sass": "^1.26.10",
-    "use-dark-mode": "^2.3.1"
+    "use-dark-mode": "^2.3.1",
+    "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "postcss-preset-env": "^6.7.0",
