--- a/website/package.json
+++ b/website/package.json
@@ -21,14 +21,15 @@
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-share": "^4.3.0",
+    "react-slick": "^0.26.1",
     "remark": "^12.0.0",
     "remark-autolink-headings": "^6.0.1",
     "remark-html": "^11.0.2",
     "remark-slug": "^6.0.0",
     "sass": "^1.26.10",
-    "use-dark-mode": "^2.3.1",
-    "react-slick": "^0.26.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "postcss-preset-env": "^6.7.0",
