--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
+    "animate.css": "^4.1.1",
     "classnames": "^2.2.6",
     "github-slugger": "^1.3.0",
     "lodash.throttle": "^4.1.1",
