--- a/website/package.json
+++ b/website/package.json
@@ -11,16 +11,20 @@
     "@svgr/webpack": "^5.4.0",
     "animate.css": "^4.1.1",
     "classnames": "^2.2.6",
+    "cookie": "^0.4.1",
     "github-slugger": "^1.3.0",
     "lodash.throttle": "^4.1.1",
+    "marked": "^1.2.8",
     "mdast-flatten-image-paragraphs": "^1.0.0",
     "next": "latest",
     "next-compose-plugins": "^2.2.0",
     "next-images": "^1.4.0",
+    "next-mdx-remote": "^2.1.3",
     "next-svgr": "0.0.2",
     "next-translate": "^0.17.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-share": "^4.3.0",
     "react-slick": "^0.26.1",
