--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "cookie": "^0.4.1",
     "github-slugger": "^1.3.0",
+    "gray-matter": "^4.0.3",
     "lodash.throttle": "^4.1.1",
     "marked": "^1.2.8",
     "mdast-flatten-image-paragraphs": "^1.0.0",
